--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+devNODE_ENV=development
 LOG_LEVEL=debug
 
 API_HOST=127.0.0.1
@@ -6,8 +6,4 @@ API_PORT=5000
 
 APP_JWT_SECRET=y4kXCSAHfluj3iOfd8ua3atrCLeYOFTu
 
-// docker connection
-DATABASE_URL="postgresql://dev:emc2@host.docker.internal:5432/fastify?schema=public"
-
-// local connection 
 # DATABASE_URL="postgresql://dev:emc2@localhost:5432/fastify?schema=public"
