--- a/package.json
+++ b/package.json
@@ -1,38 +1,49 @@
 {
   "name": "fastify-typescript",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node build/index.js | pino-pretty --colorize",
-    "dev": "ts-node-dev ./src/index.ts | pino-pretty --colorize",
+    "dev": "tsnd --no-notify --respawn --transpile-only  ./src/index.ts | pino-pretty --colorize",
+    "watch": "tsc -p ./tsconfig.json --watch",
     "postinstall": "npx typesync && husky install",
     "prisma": "dotenv -e .env prisma",
-    "db:gen": "npm run prisma generate",
-    "db:studio": "npm run prisma studio",
-    "db:migrate": "npm run prisma migrate dev",
-    "db:push": "npm run prisma db push",
-    "lint": "./node_modules/.bin/eslint"
+    "db:gen": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "prettier": "prettier src --check",
+    "prettier:fix": "prettier src --check --write --ignore-unknown",
+    "deadcode": "ts-prune | grep -v 'used in module' | sort"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hmake98/fastify-typescript.git"
+    "url": "git+https://github.com/neiz-kap/backend-fastify-template.git"
   },
-  "keywords": [],
-  "author": "hmake98",
+  "keywords": [
+    "fastify",
+    "typescript",
+    "backend",
+    "template"
+  ],
+  "author": "Neiz-Kap",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hmake98/fastify-typescript/issues"
+    "url": "https://github.com/neiz-kap/backend-fastify-template/issues"
   },
-  "homepage": "https://github.com/hmake98/fastify-typescript#readme",
+  "homepage": "https://github.com/neiz-kap/backend-fastify-template#readme",
   "dependencies": {
     "@fastify/autoload": "^5.10.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/formbody": "^7.4.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/multipart": "^8.3.0",
-    "@prisma/client": "^3.12.0",
+    "@prisma/client": "5.17.0",
     "aws-sdk": "^2.1116.0",
     "bcryptjs": "^2.4.3",
     "env-schema": "^4.0.0",
@@ -40,32 +51,34 @@
     "fastify-file-upload": "^3.0.1",
     "fluent-json-schema": "^3.1.0",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^7.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "8.4.1",
-    "@types/eslint-plugin-prettier": "3.1.0",
     "@types/http-errors": "1.8.2",
     "@types/jsonwebtoken": "8.5.8",
+    "@types/lint-staged": "~13.3.0",
     "@types/node": "17.0.25",
     "@types/pino": "7.0.4",
     "@types/prettier": "2.6.0",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "5.20.0",
-    "eslint": "8.13.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "@types/tap": "~15.0.11",
+    "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.8.0",
     "husky": "7.0.4",
     "lint-staged": "12.3.8",
     "pino-pretty": "7.6.1",
     "prettier": "2.6.2",
-    "prisma": "3.12.0",
+    "prisma": "5.17.0",
     "tap": "16.0.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "4.6.3"
+    "ts-prune": "^0.10.3",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^7.17.0"
   },
   "lint-staged": {
     "*.{js,ts,json,css,md}": [
@@ -78,5 +91,9 @@
       "pre-commit": "lint-staged",
       "pre-push": "npm run build"
     }
-  }
+  },
+  "volta": {
+    "node": "20.14.0"
+  },
+  "packageManager": "pnpm"
 }
