--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "fastify-typescript",
   "version": "1.0.1",
   "description": "",
-  "main": "server.ts",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node build/server.js | pino-pretty --colorize",
-    "dev": "tsnd --no-notify --respawn --transpile-only  ./src/server.ts | pino-pretty --colorize",
+    "start": "node build/index.js | pino-pretty --colorize",
+    "dev": "tsnd --no-notify --respawn --transpile-only  ./src/index.ts | pino-pretty --colorize",
     "watch": "tsc -p ./tsconfig.json --watch",
     "postinstall": "husky install",
     "prisma": "dotenv -e .env prisma",
@@ -49,18 +49,16 @@
   },
   "homepage": "https://github.com/neiz-kap/backend-fastify-template#readme",
   "dependencies": {
-    "@fastify/autoload": "^5.10.0",
     "@fastify/cors": "^9.0.1",
+    "@fastify/env": "^4.4.0",
     "@fastify/formbody": "^7.4.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/multipart": "^8.3.0",
     "@prisma/client": "5.17.0",
     "aws-sdk": "^2.1116.0",
     "bcryptjs": "^2.4.3",
-    "env-schema": "^4.0.0",
     "fastify": "^4.28.1",
-    "fastify-file-upload": "^3.0.1",
-    "fluent-json-schema": "^3.1.0",
+    "fastify-file-upload": "^4.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^7.10.0"
@@ -82,6 +80,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
     "husky": "7.0.4",
+    "json-schema-to-ts": "^3.1.0",
     "lint-staged": "12.3.8",
     "pino-pretty": "7.6.1",
     "prettier": "^3.3.3",
