--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "style": "prettier src --check",
-    "style:fix": "prettier src --check --write --ignore-unknown",
+    "style:fix": "prettier src --write",
     "deadcode": "ts-prune | grep -v 'used in module' | sort"
   },
   "lint-staged": {
@@ -29,7 +29,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "pnpx lint-staged"
     }
   },
   "repository": {
@@ -54,14 +54,19 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/multipart": "^8.3.0",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.1.0",
     "@prisma/client": "5.17.0",
     "aws-sdk": "^2.1116.0",
     "bcryptjs": "^2.4.3",
     "fastify": "^4.28.1",
     "fastify-file-upload": "^4.0.0",
+    "fastify-type-provider-zod": "^2.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "pino": "^7.10.0"
+    "pino": "^7.10.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -71,8 +76,6 @@
     "@types/jsonwebtoken": "8.5.8",
     "@types/lint-staged": "~13.3.0",
     "@types/node": "17.0.25",
-    "@types/pino": "7.0.4",
-    "@types/prettier": "2.6.0",
     "@types/tap": "~15.0.11",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
@@ -80,7 +83,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
     "husky": "7.0.4",
-    "json-schema-to-ts": "^3.1.0",
     "lint-staged": "12.3.8",
     "pino-pretty": "7.6.1",
     "prettier": "^3.3.3",
