--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node build/index.js | pino-pretty --colorize",
-    "dev": "tsnd --no-notify --respawn --transpile-only  ./src/index.ts | pino-pretty --colorize",
-    "watch": "tsc -p ./tsconfig.json --watch",
-    "postinstall": "husky install",
+    "dev": "tsnd --no-notify --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts | pino-pretty --colorize",
+    "watch": "tsc --watch",
     "prisma": "dotenv -e .env prisma",
     "db:gen": "prisma generate",
     "db:studio": "prisma studio",
@@ -19,18 +18,14 @@
     "lint:fix": "eslint src --fix",
     "style": "prettier src --check",
     "style:fix": "prettier src --write",
-    "deadcode": "ts-prune | grep -v 'used in module' | sort"
+    "deadcode": "ts-prune | grep -v 'used in module' | sort",
+    "prepare": "husky"
   },
   "lint-staged": {
-    "*.ts|mts|tsx": [
+    "*.{ts,mts,tsx}": [
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pnpx lint-staged"
-    }
   },
   "repository": {
     "type": "git",
@@ -40,7 +35,9 @@
     "fastify",
     "typescript",
     "backend",
-    "template"
+    "template",
+    "swagger",
+    "zod"
   ],
   "author": "Neiz-Kap",
   "license": "ISC",
@@ -79,7 +76,7 @@
     "@types/tap": "~15.0.11",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
     "husky": "7.0.4",
@@ -90,6 +87,8 @@
     "tap": "16.0.1",
     "ts-node-dev": "^1.1.8",
     "ts-prune": "^0.10.3",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "5.5.4",
     "typescript-eslint": "^7.17.0"
   },
