--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
+  "extends": "./tsconfig.check.json",
   "compilerOptions": {
-    "lib": ["es2020"],
     "module": "commonjs",
-    "target": "es2020",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "incremental": true,
-    "noImplicitAny": false,
-    "moduleResolution": "node",
-    "sourceMap": true,
+    "moduleResolution": "node10",
     "outDir": "build",
-    "baseUrl": "src",
+    "sourceMap": false,
+    "declarationMap": false,
+    "lib": ["es2022"],
+
+    "incremental": true,
+    "rootDir": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "tsc-alias": {
+    "resolveFullPaths": true,
+    "verbose": false
+  }
 }
