--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "fastify-typescript",
   "version": "1.0.1",
   "description": "",
-  "main": "src/index.ts",
   "type": "module",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "start": "node build/index.js | pino-pretty --colorize",
+    "start": "node build/src/index.js | pino-pretty --colorize",
     "dev": "tsnd --no-notify --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts | pino-pretty --colorize",
     "watch": "tsc --watch",
     "prisma": "dotenv -e .env prisma",
@@ -76,7 +76,7 @@
     "@types/tap": "~15.0.11",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.8.0",
     "husky": "7.0.4",
