--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "extends": "./tsconfig.check.json",
   "compilerOptions": {
+    "target": "es2022",
     "module": "commonjs",
     "moduleResolution": "node10",
     "outDir": "build",
     "sourceMap": false,
     "declarationMap": false,
     "lib": ["es2022"],
-
     "incremental": true,
     "rootDir": ".",
     "baseUrl": "./",
